Add heroku configs

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "heroku-postbuild": "gatsby build",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
