--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-photon"
-  }
+  },
+  "engines": {
+    "node": "10.x"
+  }  
 }
