--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "webpack": "3.0.0"
   },
   "keywords": [
     "heroku",
@@ -36,5 +37,5 @@
   },
   "engines": {
     "node": "10.x"
-  }  
+  }
 }
