--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "gatsby build",
-    "heroku-postbuild": "gatsby build",
     "build": "gatsby build",
+    "heroku-postbuild": "gatsby build",
+    "start": "gatsby serve",
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
