--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "gatsby-starter-photon",
-  "description": "Gatsby photon starter",
-  "version": "1.0.0",
-  "author": "Hunter Chang",
+  "name": "sjsu-theta-tau",
+  "private": true,
+  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "version": "0.1.0",
+  "engines": {
+    "node": "10.15.x",
+    "yarn": "1.15.x"
+  },
   "dependencies": {
-    "gatsby": "^2.2.9",
+    "gatsby": "^2.3.24",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
@@ -12,23 +16,23 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-helmet": "^5.2.0",
-    "webpack": "3.0.0"
+    "react-helmet": "^5.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^1.14.2"
   },
   "keywords": [
-    "heroku",
     "gatsby"
   ],
   "license": "MIT",
   "scripts": {
-    "heroku-postbuild": "gatsby build",
-    "start": "gatsby serve",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^1.14.2"
+    "heroku-postbuild": "gatsby build",
+    "start": "gatsby serve",
+    "serve": "gatsby serve",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "repository": {
     "type": "git",
