--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "yarn": "1.15.x"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gatsby": "^2.3.24",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
