--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sjsu-theta-tau",
+  "name": "sjsuthetatau-website",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "SJSU Theta Tau Website",
   "version": "0.1.0",
   "engines": {
     "node": "10"
