--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sass": "^2.0.11",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.5",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.1",
+    "webpack": "^4.39.2"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
@@ -29,8 +30,7 @@
     "eslint-plugin-react": "^7.14.3",
     "husky": "^3.0.4",
     "prettier": "^1.14.2",
-    "pretty-quick": "^1.11.1",
-    "webpack": "^4.30.0"
+    "pretty-quick": "^1.11.1"
   },
   "keywords": [
     "gatsby"
