--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
+    "eslint": "^6.2.1",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-flowtype": "^4.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.0.4",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.11.1"
