--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "sjsu-theta-tau",
+  "name": "sjsuthetatau-website",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "SJSU Theta Tau Website",
   "version": "0.1.0",
   "engines": {
-    "node": "10.15.x",
-    "yarn": "1.15.x"
+    "node": "10"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
@@ -14,17 +13,28 @@
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sass": "^2.0.11",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.11.0",
-    "react": "^16.8.5",
+    "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.8",
-    "react-dom": "^16.8.5",
-    "react-helmet": "^5.2.0"
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "webpack": "^4.39.2"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
+    "eslint": "^6.2.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-flowtype": "^4.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^3.0.4",
     "prettier": "^1.14.2",
-    "webpack": "^4.30.0"
+    "pretty-quick": "^1.11.1"
   },
   "keywords": [
     "gatsby"
@@ -33,8 +43,10 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write '**/*.js'",
+    "format": "pretty-quick --format",
     "heroku-postbuild": "gatsby build",
+    "lint": "eslint ./ --ext .js,.jsx",
+    "lint-fix": "yarn lint --fix && pretty-quick",
     "start": "gatsby serve",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
@@ -42,5 +54,13 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-photon"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "yarn lint --fix",
+      "pretty-quick --staged",
+      "eslint src/ --fix",
+      "git add"
+    ]
   }
 }
