--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gatsby": "^2.3.24",
+    "gatsby-image": "^2.2.14",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.2.18",
+    "gatsby-transformer-sharp": "^2.2.12",
     "jquery": "^3.4.1",
     "node-sass": "^4.11.0",
     "react": "^16.9.0",
