--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.0.4",
+    "lint-staged": "^9.2.4",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.11.1"
   },
@@ -64,7 +65,13 @@
       "yarn lint --fix",
       "pretty-quick --staged",
       "eslint src/ --fix",
-      "git add"
+      "git add",
+      "eslint --fix"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
