--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.3.24",
-    "gatsby-plugin-manifest": "^2.0.24",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.10",
-    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby": "^2.14.0",
+    "gatsby-image": "^2.2.14",
+    "gatsby-plugin-manifest": "^2.2.9",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^3.1.5",
+    "gatsby-plugin-sass": "^2.1.12",
+    "gatsby-plugin-sharp": "^2.2.18",
+    "gatsby-source-filesystem": "^2.1.18",
+    "gatsby-transformer-sharp": "^2.2.12",
     "jquery": "^3.4.1",
     "node-sass": "^4.11.0",
     "react": "^16.9.0",
@@ -33,6 +37,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.0.4",
+    "lint-staged": "^9.2.4",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.11.1"
   },
@@ -60,7 +65,13 @@
       "yarn lint --fix",
       "pretty-quick --staged",
       "eslint src/ --fix",
-      "git add"
+      "git add",
+      "eslint --fix"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
