--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack": "^4.39.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "css-loader": "^2.1.1",
     "eslint": "^6.2.1",
     "eslint-config-airbnb": "^18.0.1",
