--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.39.2"
   },
   "devDependencies": {
