--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
+    "react-vertical-timeline-component": "^2.6.2",
     "webpack": "^4.39.2"
   },
   "devDependencies": {
