--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "develop": "gatsby develop",
     "format": "pretty-quick --format",
     "heroku-postbuild": "gatsby build",
-    "lint": "eslint ./ --ext .js,.jsx",
+    "lint": "eslint ./src --ext .js,.jsx",
     "lint-fix": "yarn lint --fix && pretty-quick",
     "start": "gatsby serve",
     "serve": "gatsby serve",
