--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "10"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.14.0",
     "gatsby-image": "^2.2.14",
