--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "gatsby-transformer-sharp": "^2.2.12",
     "jquery": "^3.4.1",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.9.0",
