--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
     "no-process-exit": "off",
     "class-methods-use-this": "off",
     "react/no-unescaped-entities": 0,
-    "react/jsx-one-expression-per-line": [0]
+    "react/jsx-one-expression-per-line": [0],
+    "import/newline-after-import": "off",
+    "consistent-return": "off"
   }
 }
