--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.3",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
