--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,16 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "axios": "^0.20.0",
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.14.0",
-    "gatsby-image": "^2.2.14",
-    "gatsby-plugin-manifest": "^2.2.9",
+    "gatsby": "^2.24.55",
+    "gatsby-image": "^2.4.17",
+    "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.5",
     "gatsby-plugin-sass": "^2.1.12",
-    "gatsby-plugin-sharp": "^2.2.18",
-    "gatsby-source-filesystem": "^2.1.18",
+    "gatsby-plugin-sharp": "^2.6.33",
+    "gatsby-source-filesystem": "^2.3.28",
     "gatsby-transformer-sharp": "^2.2.12",
     "jquery": "^3.4.1",
     "node-sass": "^4.11.0",
