--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "consistent-return": "off",
     "react/no-unused-state": "warn",
     "jsx-a11y/label-has-associated-control": "off",
-    "react/destructuring-assignment": "off"
+    "react/destructuring-assignment": "off",
+    "no-param-reassign": "off"
   }
 }
