--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SJSU TT's new dynamic website/registry portal",
   "main": "server.js",
   "scripts": {
-    "dev:server": "npm start",
+    "dev:server": "nodemon server.js",
     "dev:frontend": "cd frontend && gatsby develop",
     "install-frontend": "npm install --prefix frontend",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,9 +19,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
@@ -35,6 +40,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
+    "nodemon": "^2.0.4",
     "prettier": "^2.1.1"
   }
 }
