--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@reach/router": "^1.3.4",
     "axios": "^0.20.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "gatsby": "^2.24.55",
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-manifest": "^2.4.28",
@@ -20,12 +21,16 @@
     "gatsby-source-filesystem": "^2.3.28",
     "gatsby-transformer-sharp": "^2.2.12",
     "jquery": "^3.4.1",
+    "jwt-decode": "^3.0.0-beta.2",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.39.2"
   },
   "devDependencies": {
@@ -54,7 +59,7 @@
     "develop": "gatsby develop",
     "format": "pretty-quick --format",
     "heroku-postbuild": "gatsby build",
-    "lint": "eslint ./ --ext .js,.jsx",
+    "lint": "eslint ./ --ext .jsx",
     "lint-fix": "yarn lint --fix && pretty-quick",
     "start": "gatsby serve",
     "serve": "gatsby serve",
@@ -63,18 +68,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-photon"
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "pretty-quick --staged",
-      "eslint ./ --fix",
-      "git add",
-      "eslint --fix"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   }
 }
