--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: node_js
 node_js:
-  - 10
-script:
-  - yarn install
-  - yarn build
+  - 14
 cache:
-  yarn: true
+  directories:
+    - '$HOME/.npm'
+install:
+  - cd frontend
+  - npm i
+  - cd ../server
+  - npm i
+script:
+  - npm run lint
+  - cd ../frontend
+  - npm run lint
+  - npm run build
