Wrap redux provider in gatsby-ssr and gatsby-browser

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -19,6 +19,7 @@
     "react/destructuring-assignment": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "react/no-did-update-set-state": "off",
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "no-console": "off"
   }
 }
