--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,11 @@
     "gatsby-source-filesystem": "^2.3.28",
     "gatsby-transformer-sharp": "^2.2.12",
     "jquery": "^3.4.1",
-    "jwt-decode": "^3.0.0-beta.2",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.8",
+    "react-bootstrap": "^1.4.2",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.2.1",
