Add pledge merit form

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -22,6 +22,7 @@
     "operator-linebreak": "off",
     "no-console": "off",
     "comma-dangle": "off",
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "no-nested-ternary": "off"
   }
 }
