--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,10 @@
     "gatsby-plugin-sharp": "^2.6.33",
     "gatsby-source-filesystem": "^2.3.28",
     "gatsby-transformer-sharp": "^2.2.12",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "jwt-decode": "^3.1.2",
     "node-sass": "^4.11.0",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.4.2",
