--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
