--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -20,8 +20,9 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint ./src",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
